# ot-harjoitusty-

./: README.md
TodoApp/: .pylintrc  README.md  Tyoaikakirjanpito.md  pyproject.toml  tasks.py
TodoApp/dokumentaatio/: Tyoaikakirjanpito.md  arkkitehtuuri.md  changelog.md  kuvat.md  tekoaly.md  vaatimusmaarittely.md
TodoApp/src/: bottle_generator.py  firstscreen.py  gamemenu.py  gamemenubuttons.py  main.py  screen1buttons.py
TodoApp/src/buttons/: first_screen_buttons.py  gamemenubuttons.py
TodoApp/src/draw/: draw_images.py  draw_text.py
TodoApp/src/entities/: bottle.py  burgers.py  user.py
TodoApp/src/event_logic/: bottle_generator.py
TodoApp/src/printing/: firstscreen_text.py
TodoApp/src/screens/: firstscreen.py  gamemenu.py
TodoApp/src/tests/: bottle_entity_test.py  bottle_generator_test.py  firstscreen_button_test.py  firstscreen_test.py  firstscreen_text_test.py  gamemenu_buttons_test.py  gamemenu_test.py  test_firstscreen.py  test_gamemenu.py  test_main.py  user_entity_test.py
TodoApp/src/texts/: firstscreen_text.py
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/: maksukortti.py
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage  .gitignore  pyproject.toml
laskarit/viikko2/unicafe/src/: kassapaate.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: sekvenssikaavio.md
