[project]
name = "todoapp"
version = "0.1.0"
description = ""
authors = [
    {name = "Sampinen",email = "siiri.kalliomaki@helsinki.fi"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pygame (>=2.6.1,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
